other_data/devops/v3/cloud/application/overlays/test/ingress-console.yaml
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name: platform-management
proxy:
  path: /
route:
  strip_path: true

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platform-management
  namespace: edu-cloud
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: test-edu-console.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: platform-management
              servicePort: 8000
          - path: /apis
            backend:
              serviceName: bff-platform-management
              servicePort: 7103
