other_data/devops/v3/cloud/application/overlays/test/ingress-student-iot.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bff-student-iot
  namespace: edu-cloud
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: test-edu-student-iot.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: bff-student-iot
              servicePort: 7101
